feat: add bot tests